<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/app_page_layout"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            style="@style/toolbar_position"
            layout="@layout/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/text_input_layout_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/progressBar"
            style="@style/app_progress_bar_layout"
            app:layout_constraintBottom_toTopOf="@+id/text_input_layout_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include">

            <ProgressBar style="@style/app_progress_bar" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_username"
            style="@style/feedback_input_layout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                style="@style/feedback_input"
                android:hint="@string/your_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            style="@style/feedback_input_layout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:helperText="@string/email_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                style="@style/feedback_input"
                android:hint="@string/your_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_content"
            style="@style/feedback_content_layout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_feedback"
                style="@style/feedback_content"
                android:hint="@string/your_feedback" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/buttons_layout"
            style="@style/feedback_input_layout"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/feedback_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/feedback_button_margin_end"
                android:text="@android:string/cancel"
                android:textSize="@dimen/content_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/feedback_submit"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="@dimen/content_2" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>